# n-chan

./: .gitignore  Cargo.toml  Dockerfile  README  config.json  config.json.demo  defaults.sql  init.sql  reset-db.sh
src/: config.rs  main.rs  migrations.rs  queries.rs
src/api/: form.rs  mod.rs  post.rs  reply.rs
src/fragments/: mod.rs  pageroot.rs  post.rs  postbox.rs  reply.rs  top.rs  user.rs
static/: main.css  main.js  widebanner.xcf  yotsubm.xcf
