[package]
name = "n-chan"
version = "0.1.0"
edition = "2021"

[dependencies]
maud = { version = "*", features = ["actix-web"] }
actix-web = "*"
actix-files = "*"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
welds = { version="*", features=["sqlite", "migrations"] }
rusqlite = "*"
actix-multipart = "0.7.0"
futures-util = "*"
chrono = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
rand = "*"